tests/golden/errors/import_placement.kso
main = print "hi"

import "std/json"
