tests/golden/errors/import_placement.stderr
error[formatting]: imports open the file, before any declaration
  --> import_placement.kso:3:1
   3 | import "std/json"
       ^
